[package]
name = "hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="activity"
path="src/activitylib.rs"

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
thiserror="1.0.35"
